RESOLVED FIXED281530
REGRESSION(285115@main): [ Mac Debug ] TestWebKitAPI.WebKit.AudioBufferSize is a constant crash
https://bugs.webkit.org/show_bug.cgi?id=281530
Summary REGRESSION(285115@main): [ Mac Debug ] TestWebKitAPI.WebKit.AudioBufferSize i...
Dawn Morningstar
Reported 2024-10-15 15:04:10 PDT
TestWebKitAPI.WebKit.AudioBufferSize Is a constant crash on Debug queues after 285115@main https://commits.webkit.org/285115@main HISTORY: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WebKit.AudioBufferSize TEST-RUN: https://build.webkit.org/#/builders/1224/builds/225 STDIO: https://build.webkit.org/#/builders/1224/builds/225/steps/19/logs/stdio CRASH: Crashed TestWebKitAPI.WebKit.AudioBufferSize 2024-10-15 14:20:52.983 TestWebKitAPI[48755:2959402] +[IMKClient subclass]: chose IMKClient_Legacy SHOULD NEVER BE REACHED /Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/AudioBufferSize.mm(55) : double TestWebKitAPI::waitForBufferSizeChange(WKWebView *, double) 1 0x101013c96 TestWebKitAPI::waitForBufferSizeChange(WKWebView*, double) 2 0x1010144e6 TestWebKitAPI::WebKit_AudioBufferSize_Test::TestBody() 3 0x101e4cb0b void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 4 0x101e001da void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 5 0x101e00123 testing::Test::Run() 6 0x101e01142 testing::TestInfo::Run() 7 0x101e0228c testing::TestSuite::Run() 8 0x101e11cac testing::internal::UnitTestImpl::RunAllTests() 9 0x101e5194b bool testing::internal::HandleSehExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 10 0x101e1165a bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 11 0x101e11545 testing::UnitTest::Run() 12 0x100fe7041 RUN_ALL_TESTS() 13 0x100fe6fd6 TestWebKitAPI::TestsController::run(int, char**) 14 0x101de6fb3 main 15 0x7ff801f542cd start
Attachments
Radar WebKit Bug Importer
Comment 1 2024-10-15 16:12:07 PDT
youenn fablet
Comment 2 2024-10-22 05:49:57 PDT
I was able to reproduce. https://commits.webkit.org/285115@main made sure to reunify the mock audio shared and the core audio shared unit. This makes RemoteAudioSessionProxyManager::updatePreferredBufferSizeForProcess() wait for the VPIO to stop running. Before 285115@main, the core audio shared unit would not be running. Now it is running, and we delay changing the buffer size until VPIO stops.
youenn fablet
Comment 3 2024-10-22 20:17:21 PDT
EWS
Comment 4 2024-10-24 12:12:10 PDT
Committed 285661@main (c294acb61de6): <https://commits.webkit.org/285661@main> Reviewed commits have been landed. Closing PR #35602 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.