Source/WebCore/platform/mediastream/mac/BaseAudioSharedUnit.cpp
@@ -253,10 +253,6 @@ void BaseAudioSharedUnit::stopRunning()
 {
     stopInternal();
     cleanupAudioUnit();
-
-    auto callbacks = std::exchange(m_whenNotRunningCallbacks, { });
-    for (auto& callback : callbacks)
-        callback();
 }
 
 void BaseAudioSharedUnit::reconfigure()
@@ -336,15 +332,6 @@ void BaseAudioSharedUnit::audioSamplesAvailable(const MediaTime& time, const Pla
         if (client->isProducingData())
             client->audioSamplesAvailable(time, data, description, numberOfFrames);
     }
-}
-
-void BaseAudioSharedUnit::whenAudioCaptureUnitIsNotRunning(Function<void()>&& callback)
-{
-    if (!isProducingData()) {
-        callback();
-        return;
-    }
-    m_whenNotRunningCallbacks.append(WTFMove(callback));
 }
 
 void BaseAudioSharedUnit::handleNewCurrentMicrophoneDevice(CaptureDevice&& device)
