Source/WebCore/platform/mediastream/mac/BaseAudioSharedUnit.h
@@ -89,7 +89,6 @@ public:
     virtual LongCapabilityRange sampleRateCapacities() const = 0;
     virtual int actualSampleRate() const { return sampleRate(); }
 
-    void whenAudioCaptureUnitIsNotRunning(Function<void()>&&);
     bool isRenderingAudio() const { return m_isRenderingAudio; }
     bool hasClients() const { return !m_clients.isEmptyIgnoringNullReferences(); }
 
@@ -165,7 +164,6 @@ private:
 
     bool m_isCapturingWithDefaultMicrophone { false };
     bool m_isProducingMicrophoneSamples { true };
-    Vector<Function<void()>> m_whenNotRunningCallbacks;
     Function<void()> m_voiceActivityCallback;
     Timer m_voiceActivityThrottleTimer;
 };
